# stroem

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.runner  Dockerfile.server  Dockerfile.worker  README.md  docker-bake.hcl  docker-compose.test.yml  docker-compose.yml  local-server-config.yaml  server-config.yaml  worker-config.example.yaml  worker-config.yaml
.github/scripts/: submit-bun-deps.mjs
.github/workflows/: build.yml  ci.yml  dependency-submission.yml  pages.yml  release.yml
crates/stroem-agent/: Cargo.toml
crates/stroem-agent/src/: config.rs  dispatch.rs  lib.rs  loop_dispatch.rs  mcp_client.rs  provider.rs  state.rs  tools.rs
crates/stroem-cli/: Cargo.toml
crates/stroem-cli/src/: main.rs  run.rs  stroem.rs  stroem_api.rs
crates/stroem-cli/src/local/: actions.rs  inspect.rs  mod.rs  run.rs  tasks.rs  triggers.rs  validate.rs
crates/stroem-cli/src/remote/: artifacts.rs  cancel.rs  client.rs  jobs.rs  logs.rs  mod.rs  state.rs  status.rs  tasks.rs  trigger.rs  workspaces.rs
crates/stroem-common/: Cargo.toml  README.md
crates/stroem-common/examples/: parse_workflow.rs
crates/stroem-common/src/: constants.rs  dag.rs  duration.rs  language.rs  lib.rs  sops.rs  template.rs  validation.rs  workspace_loader.rs
crates/stroem-common/src/models/: auth.rs  job.rs  mod.rs  workflow.rs
crates/stroem-common/tests/: integration_test.rs
crates/stroem-db/: Cargo.toml  README.md
crates/stroem-db/migrations/: 001_initial.sql  002_auth.sql  003_oidc.sql  004_tags_runner.sql  005_hooks.sql  006_task_actions.sql  007_last_login.sql  008_api_keys.sql  009_ready_step_index.sql  010_cancellation.sql  011_worker_version.sql  012_timeouts.sql  013_timeout_indexes.sql  014_script_type.sql  015_drop_capabilities.sql  016_ready_at.sql  017_acl.sql  018_when_conditions.sql  019_mcp_source_type.sql  020_fk_on_delete_set_null.sql  021_skipped_job_status.sql  022_for_each.sql  023_agent_type.sql  024_approval_gates.sql  025_agent_tool_source.sql  026_event_source.sql  027_step_retry.sql  028_task_state.sql  029_workspace_state.sql  030_state_upload_source.sql  031_job_source_type_index.sql  032_job_raw_input_and_lineage.sql  033_job_metrics_recorded.sql  036_job_duration_index.sql  038_job_artifact.sql  039_job_artifact_indices.sql  040_oauth.sql  041_worker_capabilities.sql
crates/stroem-db/src/: lib.rs  pool.rs
crates/stroem-db/src/repos/: api_key.rs  job.rs  job_artifact.rs  job_step.rs  mod.rs  oauth_authorization_code.rs  oauth_client.rs  oauth_refresh_token.rs  refresh_token.rs  task_state.rs  user.rs  user_auth_link.rs  user_group.rs  worker.rs  workspace_state.rs
crates/stroem-db/tests/: integration_test.rs  job_artifact_repo.rs  job_step_status_tests.rs  migration_test.rs
crates/stroem-db/tests/common/: mod.rs
crates/stroem-e2e/: Cargo.toml
crates/stroem-e2e/tests/: e2e_test.rs  harness.rs
crates/stroem-runner/: Cargo.toml
crates/stroem-runner/src/: docker.rs  kubernetes.rs  lib.rs  script_exec.rs  shell.rs  traits.rs
crates/stroem-server/: Cargo.toml
crates/stroem-server/src/: acl.rs  auth.rs  blob_storage.rs  cancellation.rs  config.rs  event_source.rs  events.rs  hooks.rs  job_completion.rs  job_creator.rs  job_recovery.rs  leader.rs  lib.rs  log_broadcast.rs  log_storage.rs  main.rs  metrics.rs  oidc.rs  orchestrator.rs  recovery.rs  scheduler.rs  state.rs  state_storage.rs  tarball_cache.rs
crates/stroem-server/src/agent/: dispatch.rs  loop_dispatch.rs  mcp_client.rs  mod.rs  state.rs  tools.rs
crates/stroem-server/src/mcp/: auth.rs  handler.rs  mod.rs  tools.rs
crates/stroem-server/src/oauth/: authorize.rs  metadata.rs  mod.rs  pkce.rs  register.rs  token.rs
crates/stroem-server/src/web/: error.rs  health.rs  hooks.rs  metrics.rs  mod.rs
crates/stroem-server/src/web/api/: api_keys.rs  artifacts.rs  auth.rs  jobs.rs  middleware.rs  mod.rs  oauth_consent.rs  oidc.rs  state_upload.rs  tasks.rs  triggers.rs  users.rs  workers.rs  workspaces.rs  ws.rs
crates/stroem-server/src/web/worker_api/: artifacts.rs  event_source.rs  jobs.rs  mod.rs  rendering.rs  state.rs  workspace.rs
crates/stroem-server/src/workspace/: folder.rs  git.rs  library.rs  mod.rs
crates/stroem-server/tests/: artifact_api_test.rs  artifact_retention_test.rs  artifact_upload_test.rs  duration_stats_test.rs  ha_test.rs  integration_test.rs  mcp_artifacts_test.rs  mcp_test.rs  metrics_test.rs  oauth_flow_test.rs  orchestrator_test.rs  propagate_to_parent_test.rs  rerun_integration_test.rs  s3_integration_test.rs  state_upload_test.rs
crates/stroem-worker/: Cargo.toml  README.md
crates/stroem-worker/src/: agent_executor.rs  artifacts.rs  client.rs  config.rs  event_source.rs  executor.rs  lib.rs  main.rs  poller.rs  secrets.rs  toolchain.rs  workspace_cache.rs
docker/: Dockerfile.server.release  Dockerfile.worker.release  entrypoint.sh  server-config.yaml  worker-config.yaml
docs/: PROJECT.md  api-reference.md  astro.config.mjs  package.json  stroem-v2-plan.md  workflow-authoring.md
docs/internal/: 2026-04-28-rerun-prefill-design.md  2026-04-28-rerun-prefill-plan.md  TODO.md  codebase-review-2026-03-01.md  phase5-advanced-flow-control.md  phase6-ai-agent-actions.md  phase6-task-state-snapshots.md  phase7-ai-agent-actions.md  stroem-v2-plan.md
docs/scripts/: generate-llms-txt.ts
docs/src/styles/: custom.css
docs/superpowers/plans/: 2026-05-19-prometheus-metrics.md  2026-06-01-artifacts.md
helm/stroem/: Chart.yaml  README.md  values.yaml
tests/: e2e.sh
tests/e2e-workspace/: produce-artifacts.yaml
ui/: .gitignore  components.json  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
ui/e2e/: artifacts.spec.ts  auth.setup.ts  console-errors.spec.ts  helpers.ts  jobs.spec.ts  log-streaming.spec.ts  login.spec.ts  settings.spec.ts  tasks.spec.ts
ui/src/: App.tsx  index.css
workspace/.workflows/: deploy.yaml  failing.yaml  hello.yaml  hooks-test.yaml  multi-select.yaml  pipeline.yaml  state-test.yaml
workspace/actions/: deploy.sh
(+137 files in other folders)
