[workspace]
resolver = "2"
members = [
    "crates/stroem-common",
    "crates/stroem-db",
    "crates/stroem-runner",
    "crates/stroem-server",
    "crates/stroem-worker",
    "crates/stroem-cli",
]

[workspace.package]
version = "0.1.12"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared across crates
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.13", features = ["json"] }

# Templates
tera = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Auth
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sha2 = "0.10"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# Config loading with env override
config = { version = "0.15", default-features = false, features = ["yaml"] }

# Scheduler
croner = "3"
tokio-util = "0.7"

# OIDC
openidconnect = "4"
url = "2"

# TLS
rustls = { version = "0.23", default-features = false }

# Container runners
bollard = "0.19"
futures-util = "0.3"
kube = { version = "3", features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# Workspace sources
async-trait = "0.1"
git2 = "0.20"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
blake2 = "0.10"
flate2 = "1"
tar = "0.4"

# Testing
tempfile = "3"

# Internal crates
stroem-common = { path = "crates/stroem-common" }
stroem-db = { path = "crates/stroem-db" }
stroem-runner = { path = "crates/stroem-runner" }
