[package]
name = "stroem-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stroem-common.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
