[package]
name = "stroem-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
reqwest.workspace = true
serde_json.workspace = true
stroem-common.workspace = true
stroem-runner = { workspace = true, default-features = false }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
