[package]
name = "stroem-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stroem"
path = "src/stroem.rs"

[[bin]]
name = "stroem-api"
path = "src/stroem_api.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
stroem-common.workspace = true
stroem-runner = { workspace = true, default-features = false }
tar.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
