[package]
name = "stroem-common"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tera.workspace = true
uuid.workspace = true
tracing.workspace = true
croner.workspace = true

[dev-dependencies]
