[package]
name = "stroem-db"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
stroem-common.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
