[package]
name = "stroem-runner"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
stroem-common.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
tracing.workspace = true

# Docker runner (optional)
bollard = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Kubernetes runner (optional)
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }

[features]
default = []
docker = ["bollard", "futures-util"]
kubernetes = ["kube", "k8s-openapi", "futures-util"]

[dev-dependencies]
tokio.workspace = true
