[package]
name = "stroem-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
sqlx.workspace = true
stroem-common.workspace = true
stroem-db.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
async-trait.workspace = true
git2.workspace = true
notify.workspace = true
blake2.workspace = true
flate2.workspace = true
tar.workspace = true
croner.workspace = true
tokio-util.workspace = true
openidconnect.workspace = true
url.workspace = true
axum-extra = { version = "0.10", features = ["cookie"] }

[dev-dependencies]
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
http = "1"
http-body-util = "0.1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
walkdir = "2"
