[package]
name = "stroem-server"
version.workspace = true
edition.workspace = true

[features]
default = ["s3"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
stroem-common.workspace = true
stroem-db.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
async-trait.workspace = true
git2.workspace = true
notify.workspace = true
blake2.workspace = true
flate2.workspace = true
tar.workspace = true
clap.workspace = true
config.workspace = true
croner.workspace = true
tokio-util.workspace = true
openidconnect.workspace = true
url.workspace = true
axum-extra = { version = "0.10", features = ["cookie"] }
subtle = "2"
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "minio"] }
http = "1"
http-body-util = "0.1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
walkdir = "2"
aws-sdk-s3 = "1"
aws-config = "1"
