[package]
name = "stroem-worker"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
stroem-common.workspace = true
stroem-runner.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
config.workspace = true
flate2.workspace = true
tar.workspace = true

[features]
default = ["docker", "kubernetes"]
docker = ["stroem-runner/docker"]
kubernetes = ["stroem-runner/kubernetes"]

[dev-dependencies]
tempfile.workspace = true
