[package]
name = "stroem-worker"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
rig-core = { workspace = true, optional = true }
stroem-agent = { workspace = true, optional = true }
stroem-common.workspace = true
stroem-runner.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
clap.workspace = true
config.workspace = true
dashmap.workspace = true
flate2.workspace = true
tar.workspace = true
rustls = { workspace = true, optional = true }
bollard = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
tempfile.workspace = true

[features]
default = ["docker", "kubernetes", "agent"]
docker = ["stroem-runner/docker", "dep:bollard", "dep:futures-util"]
kubernetes = ["stroem-runner/kubernetes", "rustls", "dep:kube", "dep:k8s-openapi", "dep:futures-util"]
agent = ["dep:stroem-agent", "dep:rig-core", "mcp"]
mcp = ["stroem-agent/mcp"]

[dev-dependencies]
wiremock = "0.6"
